--- a/src/main/properties/gerbil.properties
+++ b/src/main/properties/gerbil.properties
@@ -56,9 +56,10 @@ org.aksw.gerbil.semantic.subclass.SubClassInferencer.classHierarchyFiles=${org.a
 
 ### Well known Knowledge Bases
 org.aksw.gerbil.evaluate.DefaultWellKnownKB=http://dbpedia.org/resource/
-org.aksw.gerbil.evaluate.DefaultWellKnownKB=http://dbpedia.org/ontology/
+#org.aksw.gerbil.evaluate.DefaultWellKnownKB=http://dbpedia.org/ontology/
 org.aksw.gerbil.evaluate.DefaultWellKnownKB=http://ontologydesignpatterns.org/ont/dul/
 org.aksw.gerbil.evaluate.DefaultWellKnownKB=http://www.ontologydesignpatterns.org/ont/d0.owl
+org.aksw.gerbil.evaluate.DefaultWellKnownKB=http://www.ontologydesignpatterns.org/ont/dul/ 
 
 ### HTTP communication configuration
 # The maximum time the system waits for an HTTP based annotator to respond (in ms)
